--- a/private/config.json
+++ b/private/config.json
@@ -1,5 +1,5 @@
 {
   "basePath": "/idiot/api",
-  "apiDefines": "private/sample/api",
+  "apiDefines": "private/api",
   "resource": "private/sample/resource"
 }
